--- a/blog/[20250110]_[휴가복귀 첫날]_[django]_[cats-8096304_1280.jpg]_[테스트중]_[].md
+++ b/blog/[20250110]_[휴가복귀 첫날]_[django]_[cats-8096304_1280.jpg]_[테스트중]_[].md
@@ -2,3 +2,13 @@
 
 * hello world 1
 * hello world 23
+
+![제주도 이미지](img/404.png)
+
+'''python
+print('hello')
+'''
+
+'''js
+console.log('hello')
+'''
