--- a/blog/[20250110]_[휴가복귀 첫날]_[django]_[cats-8096304_1280.jpg]_[테스트중]_[].md
+++ b/blog/[20250110]_[휴가복귀 첫날]_[django]_[cats-8096304_1280.jpg]_[테스트중]_[].md
@@ -6,7 +6,7 @@
 * 1. 노션 비밀번호로 바꾸기(이메일 인증에서)
 * https://one-it.tistory.com/entry/%EB%85%B8%EC%85%98-%EA%BF%80%ED%8C%81-%EB%B9%84%EB%B0%80%EB%B2%88%ED%98%B8%EB%A1%9C-%EB%A1%9C%EA%B7%B8%EC%9D%B8%ED%95%98%EA%B8%B0
 
-2. gpt는 마이크로소프트 계정으로
+* 2. gpt는 마이크로소프트 계정으로
 
 ![제주도 이미지](img/404.png)
 
